--- a/package.json
+++ b/package.json
@@ -16,25 +16,28 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
+    "expo-constants": "~9.3.3",
     "expo-font": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
     "expo-linear-gradient": "~8.4.0",
+    "expo-sqlite": "~8.5.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "7.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-image-picker": "^3.3.2",
+    "react-native-map-clustering": "^3.4.2",
+    "react-native-maps": "0.27.1",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-select-lists": "^1.0.1",
     "react-native-svg": "^12.1.0",
-    "react-native-web": "~0.13.12",
-    "expo-image-picker": "~9.2.0",
-    "expo-constants": "~9.3.3",
-    "firebase": "7.9.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
