--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-font": "~8.4.0",
     "expo-image-picker": "~9.2.0",
     "expo-linear-gradient": "~8.4.0",
+    "expo-location": "~10.0.0",
     "expo-sqlite": "~8.5.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
